syntax = "proto3";

package services.sess.store.svc.v1;

import "services/sess/store/svc/v1/session.proto";

option go_package = "sess/store/svc/v1";

service SessStoreSvc {
    rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
    rpc GetSessionByID(GetSessionByIDRequest) returns (GetSessionByIDResponse);
}