syntax = "proto3";

package services.session.store.svc.v1;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

message Session {
    google.protobuf.StringValue id = 1;
    google.protobuf.StringValue user_id = 2;
    google.protobuf.StringValue token = 3;
    google.protobuf.Timestamp created_at = 4;
}

message CreateSessionRequest {
    google.protobuf.StringValue user_id = 1;
}

message CreateSessionResponse {
    Session session = 1;
}

message GetSessionByIDRequest {
    google.protobuf.StringValue id = 1;
}

message GetSessionByIDResponse {
    Session session = 1;
}